devel
-----

* Added support for fetching the list of currently running and slow AQL queries
  from all databases at once, by adding an `all` parameter to the following
  query APIs:

  * `require("@arangodb/aql/queries").current({ all: true })`: will return the
    currently running queries from all databases, not just the currently
    selected database.
  * HTTP GET `/_api/query/current?all=true`: same, but for the HTTP REST API.
  * `require("@arangodb/aql/queries").slow({ all: true })`: will return the
    slow query history from all databases, not just the currently selected
    database.
  * HTTP GET `/_api/query/slow?all=true`: same, but for the HTTP REST API.
  * `require("@arangodb/aql/queries").clearSlow({ all: true })`: will clear
    the slow query history for all databases, not just the currently selected
    database.
  * HTTP DELETE `/_api/query/slow?all=true`: same, but for the HTTP REST API.

  Using the `all` parameter is only allowed when making the call inside the
  `_system` database and with superuser privileges.
  
* Make all Pregel HTTP and JavaScript APIs also accept stringified execution
  number values, in addition to numeric ones.

  This allows passing larger execution numbers as strings, so that any data
  loss due to numeric data type conversion (uint32 => double) can be avoided.

  The change also makes the Pregel HTTP and JavaScript APIs for starting a
  run return a stringified execution number, e.g. "12345" instead of 12345.

* Updated ArangoDB Starter to 0.14.15-1.

* Fix Windows directory creation error handling.

* Add an AQL query kill check during early pruning. Fixes issue #13141.

* Remove a case in which followers were dropped unnecessarily in streaming
  transactions that replicated to the same follower.

* Fixed ES-662 by introducing refactored thread pool to make more efficient
  consolidation and commit routines for links of ArangoSearch views.
